# ADIOS-Kokkos-bug

./: CMakeLists.txt  README.md  build_example.sh  kokkosHelloWorld.cpp
myADIOS/: CMakeLists.txt  myADIOS.pc.in
myADIOS/include/: adiosKokkos.h  myADIOS.h
myADIOS/src/: adiosKokkos.cpp  myADIOS.cpp
